k8-manifests/inova-n1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inova-n1-network
  namespace: hashed-network
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - n1.test.hashed.systems
    secretName: inova-n1-network
  rules:
  - host: n1.test.hashed.systems
    http:
      paths:
      - pathType: Prefix
        path: /p2p/
        backend:
          service:
            name: inova-n1-network
            port:
              number: 30333
      - pathType: Prefix
        path: /
        backend:
          service:
            name: inova-n1-network
            port:
              number: 9944
      - pathType: Prefix
        path: /rpc/
        backend:
          service:
            name: inova-n1-network
            port:
              number: 9933
